- Teil der fehlenden Vorlesung vom 2007-04-23 ergaenzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@926 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -115,6 +115,8 @@
 \newcommand*{\FM}{\mathfrak{M}}
 \newcommand*{\FF}{\mathfrak{F}}
 \newcommand*{\FU}{\mathfrak{U}}
+\newcommand*{\Fn}{\mathfrak{n}}
+\newcommand*{\Fb}{\mathfrak{b}}
 
 \DeclareMathOperator{\gl}{gl}
 \DeclareMathOperator{\spur}{Spur}
@@ -782,6 +784,129 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   \highl{halbeinfach}.
 \end{defini}
 
+\section{Nilpotente Lie-Algebren}
+\todo{Stimmt die Überschrift?}
+
+\begin{defini}
+  Eine Lie-Algebra $L$ mit $L^{n}=0$ für ein $n\in\N$ heißt \highl{nilpotent}.
+  Im Falle $L^{2}=0$ wird diese als \highl{kommutativ} oder \highl{abelsch}
+  bezeichnet.
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}
+    \item Für $n\in\N$ bilden die oberen Dreiecksmatrizen mit Hauptdiagonale 0
+    eine Unteralgebra $L=\Fn_{n}$ von $\Fb_{n}$. Ist $\{e_{ij}\colon
+    i,j=1,\dotsc,n\}$ die Standardbasis von $\gl_{n}$, so ist $\{e_{ij}\colon
+    1\leq i<j\leq n\}$ eine Basis von $L$. Wir behaupten, dass für $m\in\N$
+    die Matrizen $e_{ij}$ mit $j-i\geq m$ eine Basis von $L^{m}$ bilden.
+
+    Für $m=1$ ist das richtig. Sei also $m>1$ und bereits gezeigt, dass die
+    $e_{ij}$ mit $j-i\geq m-1$ eine Basis von $L^{m-1}$ bilden. Dann besteht
+    $L^{m}=[L^{m-1},L]$ aus den Linearkombinationen der Elemente $[e_{ij},
+    e_{kl}]= e_{ij}e_{kl}-e_{kl}e_{ij}= \delta_{jk}e_{il}-\delta_{il}e_{kj}$
+    mit $j-i\geq m-1$ und $k<l$. Im Fall $j=k$ ist $l-i\geq k+1-i=j-i+1\geq m$
+    und im Fall $i=l$ ist $j-k\geq j+1-k=j+1-i\geq m$. Daher ist $[e_{ij},
+    e_{kl}]$ stets Linearkombination der $e_{rs}$ mit $s-r\geq m$.
+
+    Für $r,s\in\{1,\dotsc,n\}$ mit $s-r\geq m$ ist umgekehrt
+    $e_{rs}=[e_{r,s-1}, e_{r-1,s}]\in L^{m}$. Damit ist die Behauptung
+    gezeigt. Im Fall $m\geq n$ ist insbesondere $L^{n}=0$, d.\,h. $L$ ist
+    nilpotent.
+   \item Dagegen ist die Lie-Algebra $\Fb_{n}$ aller oberen Dreiecksmatrizen
+    für $n>1$ nicht nilpotent. Denn $\{e_{ij}\colon 1\leq i<j\leq n\}$ ist
+    eine Basis von $\Fb_{n}$ und für $i\leq j$ und $k\leq l$ ist $[e_{ij},
+    e_{kl}]= \delta_{jk}e_{il}-\delta_{il}e_{kj}$. Dieses Element liegt in
+    $\Fn_{n}$ im Fall $j\neq k, i\neq l$, aber auch im Fall $j=k, i=l$. Daher
+    ist $\Fb_{n}^{2}\subseteq\Fn_{n}$. Andererseits ist $[e_{ij},
+    e_{kl}]=e_{ij}$ für $i<j$, d.\,h. $\Fb_{n}^{2}\subseteq \Fn_{n}$.
+    Insgesamt ist also $\Fb_{n}^{2}=\Fn_{n}$.
+    Das gleiche Argument zeigt aber auch $\Fn_{n}\subseteq [\Fn_{n}, \Fb_{n}]=
+    [\Fb_{n}^{2}, \Fb_{n}]= \Fb_{n}^{3}$ und umgekehrt ist
+    $\Fb_{n}^{3}\subseteq\Fb_{n}^{2}=\Fn_{n}$. Folglich ist
+    $\Fb_{n}^{3}=\Fn_{n}= \Fb_{n}^{2}$. Obiger Schluss lässt sich weiter
+    fortsetzen und man erhält $\Fb_{n}^{m}=\Fn_{n}$ für alle $m\in\N$ mit
+    $m\geq2$. Für $n>1$ ist $\Fb_{n}$ daher nicht nilpotent.
+  \end{enumerate}
+\end{bsp}
+
+\begin{bemerkON}
+  \begin{enumerate}
+    \item Eine Lie-Algebra $L$ ist genau dann abelsch, wenn $[a,b]=0$ für alle
+    $a,b\in L$ ist.
+   \item Ist $L$ nilpotent, so auch jede Unteralgebra $K\subseteq L$. Denn
+    induktiv zeigt man leicht $K^{n}\subseteq L^{n}$ für $n\in\N$.
+   \item Für jeden Homomorphismus von Lie-Algebren $\phi\colon L\rightarrow M$
+    und $n\in\N$ ist analog $\phi(L^{n})=\phi(L)^{n}$. Mit $L$ ist also auch
+    $\phi(L)$ nilpotent.
+   \item Ist $Z/_{Z(L)}$ nilpotent, so auch $L$. Denn ist $k\in\N$ mit $0=
+    (L/_{Z(L)})^{k}=L^{k}+Z(L)/_{Z(L)}$, so ist $L^{k}\subseteq Z(L)$ und
+    $L^{k+1}=[L^{k},L]\subseteq[Z(L),L]=0$
+  \end{enumerate}
+\end{bemerkON}
+
+\begin{bemerk}\label{bem:32}
+  Seien $V$ ein endlich-dimensionaler $\C$-Vektorraum und $\phi\in\gl(V)$ mit
+  $\phi^{n}=0$ für ein $n\in\N$. Dann heißt $\phi$ \highl{nilpotent}. Für
+  $\psi\in\gl(V)$ ist gegebenenfalls $\ad_{\phi}(\psi)=[\phi, \psi]=
+  \phi\circ\psi- \psi\circ\phi$. Induktiv folgt daraus, dass
+  $(\ad_{\phi})^{k}(\psi)$ für $k\in\N$ eine Summe von Termen der Form
+  $\pm\phi^{i}\circ\psi\circ\phi^{j}$ mit $i+j=k$ ist. Im Fall $k=2n$ ist also
+  $i\geq n$ oder $j\geq n$. Daher ist $(\ad_{\phi})^{2n}=0$, d.\,h. die
+  lineare Abbildung $\ad_{\phi}\colon\gl(V)\rightarrow\gl(V)$ ist auch
+  nilpotent.
+\end{bemerk}
+
+\begin{satzON}
+  Sei $V\neq0$ ein endlich-dimensionaler $\C$-Vektorraum und sei $L\subseteq
+  \gl(V)$ eine Unteralgebra in der jedes Element nilpotent ist. Dann existiert
+  ein $v\in V\setminus\{0\}$ mit $\phi(v)=0$ für alle $\phi\in L$.
+  \begin{proof}
+    Der Beweis erfolgt per Induktion nach $n\colon\dim L$. Für den
+    Induktionsanfang  $n=0$ ist alles klar. Sei also $n>0$ und der Satz
+    bewiesen für Lie-Algebren kleinerer Dimension. Sei $K\subset L$ eine echte
+    Unteralgebra möglichst großer Dimension. Jedes $\phi\in K$ induziert wegen
+    $\ad_{\phi}(K)\subseteq K$ eine lineare Abbildung:
+    \begin{gather*}
+      \overline{\phi}\colon L/_{K}\rightarrow L/_{K},
+	 \psi\mapsto\ad_{\phi}(\phi)+K=[\phi,\psi]+K
+    \end{gather*}
+    Nach \autoref{bem:32} sind mit $\phi$ auch $\ad_{\phi}$ und
+    $\overline{\phi}$ nilpotent und die Abbildung:
+    \begin{gather*}
+      \Phi\colon K\rightarrow\gl(L/_{K}), \phi\mapsto\overline{\phi}
+    \end{gather*}
+    ist ein Homomorphismus von Lie-Algebren. Wegen $\dim\Phi(K)\leq\dim K<n$
+    können wir die Induktionsvoraussetzung anwenden und erhalten ein
+    $\leq+K\in L/_{K}\setminus\{0\}$ mit
+    \begin{gather*}
+      0=(\Phi(\phi))(\psi+K)=\overline{\phi}(\psi+K)=[\phi,\psi]+K
+    \end{gather*}
+    d.\,h. $[\phi,\psi]\in K$ für $\phi\in K$. Folglich gilt für $\phi,
+    \phi'\in K, \alpha, \alpha'\in\C$:
+    \begin{gather*}
+      [\phi+\alpha\psi, \phi'+\alpha'\psi]=[\phi,\phi']+\alpha'[\phi,\psi]
+	 -\alpha[\phi',\psi]\in K
+    \end{gather*}
+    Daher ist $K+\C\psi\subseteq L$ eine Unteralgebra, die $K$ echt enthält.
+    Nach der Wahl von $K$ ist also $L=K+\C\psi$.
+
+    Für $\phi,\phi'in K, \alpha\in\C$ ist außerdem $[\phi,\phi'+\alpha\psi]=
+    [\phi,\phi'] +\alpha[\phi,\psi]\in K$. Daher ist $K\subseteq L$ Ideal. Wir
+    wenden jetzt die Induktionsvoraussetzungen auf die Unteralgebra
+    $K\subseteq\gl(V)$ an und erhalten so $W\colon=\{v\in V\colon \phi(v)=0
+    \text{ für } \phi\in K\}\neq\emptyset$. Offenbar ist $W\subseteq V$
+    Untervektorraum und für $\phi\in K, w\in W$ gilt:
+    \begin{gather*}
+      \phi(\psi(w))= [\phi,\psi](w)+\psi(\phi(w))= [\phi,\psi](w)=0
+    \end{gather*}
+    wegen $[\phi,\psi]\in K$. Daher ist $\psi(W)\subseteq W$ und die
+    Einschränkung $w\colon W\rightarrow W$ von $\psi$ ist nilpotent. Sei
+    $m\in\N$ mit $w^{m}=0\neq w^{m-1}$ und sei $w\in W$ mit
+    $v\colon=w^{m-1}(w)\neq 0$. Dann ist $\psi(v)=0$ und $\phi(v)=0$ für $v\in
+    K$. Wegen $L=K+\C\psi$ folgt die Behauptung.
+  \end{proof}
+\end{satzON}
 
 \todo{Vorlesung vom 2007-04-23}
 
