--- a/vorlage/skript.latex
+++ b/vorlage/skript.latex
@@ -201,7 +201,7 @@
   {Vorlesungsskripte der Fakultät für Mathematik}
   \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
   weiter betreut. Das
-  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Denoch
+  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Dennoch
   garantiert weder der auf der Titelseite genannte Dozent, die Personen,
   die an dem Dokument mitgewirkt haben, noch die
   Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
