--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -111,7 +111,7 @@
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
-%\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 \newcommand*{\FM}{\mathfrak{M}}
 \newcommand*{\FF}{\mathfrak{F}}
 \newcommand*{\FU}{\mathfrak{U}}
@@ -127,6 +127,7 @@
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\Der}{Der}
 \DeclareMathOperator{\Rad}{Rad}
+\DeclareMathOperator{\spn}{span}
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -1526,7 +1527,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 
 \begin{bsp}
   Sei $n\in\N$ und $S\colon=\Rad(\gl_{n})$. Dann sind einerseits
-  $\Fb_{n}+S/_{S}\isom \Fb_{n}/\Fb_{n}\cap S$ und $\Fb_{n}+S$ auflösbare
+  $\Fb_{n}+S/_{S}\simeq \Fb_{n}/\Fb_{n}\cap S$ und $\Fb_{n}+S$ auflösbare
   Lie-Algebren. Nach Satz 5.3 \todo{Link einfügen} existiert andererseits zu
   jedem $\C$-Vektorraum $V$ der Dimension $n<\infty$ und jeder auflösbaren
   Unteralgebra $U\subseteq \gl(V)$ eine Basis von $V$ bezüglich der $U$ durch
@@ -1548,7 +1549,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
     \alpha_{jk}\colon\Fh_{n}\cap\sl_{n}\rightarrow \C,
        \sum_{i=1}^{n}\xi_{i}e_{ii}\mapsto \xi_{j}-\xi_{k} \qquad j\neq k
   \end{gather*}
-  Dabei ist jeweils $\Ce_{jk}$ der Wurzelraum bezüglich $\alpha_{jk}$. Man
+  Dabei ist jeweils $\C e_{jk}$ der Wurzelraum bezüglich $\alpha_{jk}$. Man
   sieht leicht, dass $\Pi\colon=\{\alpha_{12},
   \alpha_{23},\dotsc,\alpha_{n-1,n}\}$ eine Basis von $\Phi$ ist. Für $\alpha,
   \beta\in\Pi$ ist $\beta-\alpha\notin \Phi$. Daher hat die $\alpha$-Kette
@@ -1560,7 +1561,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
   $\alpha_{23}, \alpha_{13}$ und man erhält $A_{\alpha_{12}\alpha_{23}}=-1$.
   Aus dem \autoref{satz:76} folgt $A_{\alpha_{12}\alpha_{i,i+1}}=0$ für
   $i>2$. Die übrigen Wurzeln kann man analog behandeln. Der Coxetergraph von
-  $\Sl_{n}$ bezüglich $\Pi$ hat die Form (o-o-o\dots{}-o-o \todo{Graph
+  $\sl_{n}$ bezüglich $\Pi$ hat die Form (o-o-o\dots{}-o-o \todo{Graph
   zeichen}, offenes Polygon in der Graphentheorie).
 \end{bsp}
 
@@ -1575,7 +1576,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 
 \begin{bemerkON}
   Dies definiert eine Äquivalenzrelation auf der Menge der Ecken von $\Gamma$.
-  Hat $\Gamma$ nur eine einzige Zusammenhangskomponente, dannheißt der Graph
+  Hat $\Gamma$ nur eine einzige Zusammenhangskomponente, dann heißt der Graph
   $\Gamma$ \highl{zusammenhängend}. 
 \end{bemerkON}
 
@@ -1617,7 +1618,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
     \alpha(h_{\beta})\nu_{\alpha\beta} e_{\alpha-\beta}\neq0$. Dies
     widerspricht der Wahl von $x$.
 
-    Also $x=h\in H$. Wegen $H^{*}=\span(\Pi)$ existiert ein $\alpha\in\Pi$ mit
+    Also $x=h\in H$. Wegen $H^{*}=\spn(\Pi)$ existiert ein $\alpha\in\Pi$ mit
     $\alpha(x)\neq0$. Wegen $[x,e_{\alpha}]=\alpha(x)e_{\alpha}$ ist auch
     $e_{\alpha}\in I$. Daher ist auch $h_{\alpha}=[e_{\alpha}, e_{-\alpha}]\in
     I$. Ist $\alpha$ mit einem $\beta\in\Pi$ durch eine Kante verbunden, so
