--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -1537,6 +1537,45 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   Seien $L$ eine Lie-Algebra, $V$ ein $L$-Modul, $I\subseteq L$ ein Ideal und
   $\lambda\in I^{*}$. Dann ist $U=\{v\in V\colon\}\subseteq V$ ein Untermodul.
   \todo{Formel ergänzen}
+  \begin{proof}
+    Offenbar ist $U\subseteq V$ ein Untervektorraum und sei o.\,B.\,d.\,A.
+    $U\neq 0$. Für $u\in U, x\in L, a\in I$ gilt:
+    \begin{align*}
+      a\cdot(x\cdot u) &= x\cdot(a\cdot u)+[a,x]\cdot u= x\cdot(\lambda(a)u)
+	 +\lambda([a,x])u\\
+      &= \lambda(a)x\cdot u+\lambda([a,x])u
+    \end{align*}
+    Für ein $i\in\N$ sei bereits gezeigt, dass die Elemente
+    $\alpha_{ij}(a)\in\C$ existieren mit
+    \begin{gather*}
+      a\cdot(x^{i}\cdot u)= \lambda(a)x^{i}\cdot i+\sum_{j=0}^{i-1}
+	 \alpha_{ij}(a)x^{j}\cdot u
+    \end{gather*}
+    Dann gilt
+    \begin{align*}
+      a\cdot(x^{i+1}\cdot u) &= a\cdot(x\cdot(x^{i}\cdot u))=
+	 x\cdot(a\cdot(x^{i}\cdot u)) +[a,x](x^{i}u)\\
+      &= x(\lambda(a)x^{i}u+\sum_{j=0}^{i-1} \alpha_{ij}(a) x^{j}u)+
+	 \lambda([a,x])x^{i}u+ \sum_{j=0}^{i-1} \alpha_{ij}([a,x])x^{j}u\\
+      &= \lambda(a) x^{i+1}u+ \sum_{j=0}^{i-1} \alpha_{ij}(a) x^{j+1}u+
+	 \lambda([a,x])x^{i}u+ \sum_{j=0}^{i-1} \alpha_{ij}([a,x])x^{j}u\\
+      &= \lambda(a) x^{i+1}u+ \sum_{j=0}^{i}
+	 \underbrace{\alpha_{i+1,j}(a)}_{\in\C} x^{j}u
+    \end{align*}
+    Wegen $\dim V<\infty$ existiert ein $n\in\N$ mit der Eigenschaft, dass
+    $u,xu,\dotsc,x^{n}u$ linear abhängig sind. Sei $n$ minimal mit dieser
+    Eigenschaft und $W\colon= \span(u,xu,\dotsc,x^{n-1}u)$. Dann bilden
+    $u,xu,\dotsc,x^{n-1}u$ eine Basis von $W$. Offenbar ist $xW\subseteq W$
+    und $aW\subseteq W$ für $a\in I$. Ist $\Delta$ die Darstellung von $L$ auf
+    $V$, so gilt für $a\in I\colon\spur(\Delta(a)|W)=n\lambda(a)$.
+    Insbesondere ist
+    \begin{gather*}
+      n\lambda([a,x])= \spur(\Delta([a,x])|W)= \spur(\Delta(a)\circ\Delta(x)
+	 - \Delta(x)\circ\Delta(a)|W)=0
+    \end{gather*}
+    Folglich ist $\lambda([a,x])=0$ und $a\cdot(x\cdot u)=\lambda(a)x\cdot u$.
+    Dies zeigt $x\cdot u\in U$.
+  \end{proof}
 \end{satz}
 
 \todo{Vorlesung vom 2007-05-09}
@@ -1885,7 +1924,6 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 \todo{Vorlesung einfügen}
 
 \chapter{Halbeinfache Lie-Algebren}
-
 
 %% satz 7.6
 \begin{satz}\label{satz:76}
