--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -64,7 +64,10 @@
 \usepackage{nicefrac}
 \usepackage{wasysym}
 \usepackage{pstricks}
-\usepackage[final]{graphicx}
+\usepackage{ltxtable}
+\usepackage{booktabs}
+\usepackage{longtable}
+
 \addtokomafont{sectioning}{\boldmath}
 
 % nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
@@ -102,6 +105,7 @@
 \newcommand*{\bemerkautorefname}{Bemerkung}
 \newcommand*{\definiautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
+\newcommand*{\figrefname}{Abbildung}
 %\newcommand*{\festlautorefname}{Festlegung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
@@ -189,6 +193,277 @@
 %  			       {\hspace\labelsep\normalfont ##1}%
 % 		 \begin{description}}%
 % 		{\end{description}}
+
+\begin{filecontents}{coxetergut.tex}
+    \begin{longtable}{l|X|l|X}
+    \toprule
+    \textsc{Name} & \textsc{Coxetergraph} & \textsc{Matrix} &
+    \textsc{Determinante}\\
+    \midrule
+    $A_{1}$ & o & (2) & 2\\
+    \midrule
+    $A_{2}$ & o-o & $\begin{pmatrix}2 & -1 \\ -1 & 2\end{pmatrix}$ & 3\\
+    \midrule
+    $A_{l}$ für $(l>2)$ & o-o-\dots{}-o-o & $\begin{pmatrix}A_{l-1} & *\\
+						    * & 2\end{pmatrix}=
+    \begin{pmatrix}
+      A_{l-2} & * & 0\\
+      * & 2 & -1\\
+      0 & -1& 2
+    \end{pmatrix}$ & $2\det A_{l-1}-\det A_{l-2}$, Induktion:
+    $\det A_{l}=l+1$\\
+      \midrule
+      $B_{2}$ & o=o & $\begin{pmatrix}2& -\sqrt{2}\\-\sqrt{2}&
+				 2\end{pmatrix}$ & 4-2=2\\
+      \midrule
+      $B_{3}$ & o-o=o & $\begin{pmatrix}B_{2} & *\\ * & 2\end{pmatrix}=
+    \begin{pmatrix}
+      A_{1} & * 0 \\
+      * & 2 & -1\\
+      0 & -1 & 2
+    \end{pmatrix}$ & $2\det B_{2}-\det A_{1}=4-2=2$\\
+      \midrule
+      $B_{l}$ für $l>3$ & o-\dots{}-o=o & $\begin{pmatrix}B_{l-1} & *\\*
+						  & 2\end{pmatrix}=
+    \begin{pmatrix}
+      B_{l-2} & * & 0\\
+      * & 2 & -1\\
+      0 & -1 &2
+    \end{pmatrix}$ & $2\det B_{l-1}-\det B_{l-2}=2$ (induktiv)\\
+      \midrule
+      $D_{4}$ &
+      \begin{pspicture}(1,2)
+        \psline(0,0.5)(1,.5)(1.5,1)
+	\psline(1,.5)(1.5,0)
+	\psdots[dotstyle=o,dotsize=.25](0,.5)(1,.5)(1.5,1)(1.5,0)
+      \end{pspicture} &  $\begin{pmatrix}A_{3} & *\\ * & 2\end{pmatrix}=
+    \begin{pmatrix}
+      A_{1} & 0 & * & 0\\
+      0 & A_{1} & * & 0\\
+      * & * & 2 & -1\\
+      0 & 0 & -1 & 2
+    \end{pmatrix}$ & $2\det A_{3}-(\det A_{1})^{2}=4$\\
+      \midrule
+      $D_{5}$ &
+      \begin{pspicture}(1,2)
+	\psline(0,.5)(1,.5)(1.5,1)
+	\psline(1,.5)(1.5,0)
+	\psdots[dotstyle=o,dotsize=.25](0,.5)(.5,.5)(1,.5)(1.5,1)(1.5,0)
+      \end{pspicture} &  $\begin{pmatrix}D_{4} & *\\ * & 2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{3} & * & 0\\
+        * & 2 & -1\\
+        0 & -1 & 2
+      \end{pmatrix}$ & $2\det D_{4}-\det A_{3}=4$\\
+      \midrule
+      $D_{l}$ für $l>5$ &
+      \begin{pspicture}(1,3)
+	\psline(0,.5)(1,.5)
+	\psline(2,.5)(2.5,.5)(3,1)
+	\psline(2.5,.5)(3,0)
+	\psdots[dotsize=.06](1.3,.5)(1.5,.5)(1.7,.5)
+	\psdots[dotstyle=o,dotsize=.25](0,.5)(.5,.5)(2.5,.5)(3,1)(3,0)
+      \end{pspicture} &  $\begin{pmatrix}D_{l-1} & *\\ * & 2\end{pmatrix}=
+      \begin{pmatrix}
+        D_{l-2} & * & 0\\
+        * & 2 & -1\\
+        0 & -1 &2
+      \end{pmatrix}$ & $2\det D_{l-1}-\det D_{l-2}=4$\\
+      \midrule
+      $E_{6}$ &
+      \begin{pspicture}(1,2)
+	\psline(0,1)(2,1)
+	\psline(.9,1)(.9,0)
+	\psline(1.1,1)(1.1,0)
+	\psdots[dotstyle=o,dotsize=.25](0,1)(.5,1)(1,1)(1.5,1)(2,1)(1,0)
+      \end{pspicture} &  $\begin{pmatrix}D_{5} & *\\ * &2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{4} & * & 0\\
+        * & 2 & -1\\
+        0 & -1 &2
+      \end{pmatrix}$ & $2\det D_{5}-\det A_{4}=3$\\
+      \midrule
+      $E_{7}$ &
+      \begin{pspicture}(1,2.5)
+	\psline(0,1)(2.5,1)
+	\psline(.9,1)(.9,0)
+	\psline(1.1,1)(1.1,0)
+	\psdots[dotstyle=o,dotsize=.25](0,1)(.5,1)(1,1)(1.5,1)(2,1)(2.5,1)(1,0)
+      \end{pspicture} & $\begin{pmatrix}D_{6} & *\\ * & 2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{5} & * & 0\\
+        * & 2 & -1\\
+        0 & -1 &2
+      \end{pmatrix}$ & $2\det D_{6}-\det A_{5}=2$\\
+      \midrule
+      $E_{8}$ &
+      \begin{pspicture}(1,3)
+	\psline(0,1)(3,1)
+	\psline(.9,1)(.9,0)
+	\psline(1.1,1)(1.1,0)
+	\psdots[dotstyle=o,dotsize=.25](0,1)(.5,1)(1,1)(1.5,1)(2,1)(2.5,1)(3,1)(1,0)
+      \end{pspicture} & $\begin{pmatrix}D_{7} & *\\ * & 2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{6} & * & 0\\
+        * & 2 & -1\\
+        0 & -1 &2
+      \end{pmatrix}$ & $2\det D_{7}-\det A_{6}=1$\\
+      \midrule
+      $F_{4}$ & o-o=o-o & $\begin{pmatrix}B_{3} & *\\ * & 2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{2} & *& 0\\
+        * & 2 & -1\\
+        0 & -1 &2
+      \end{pmatrix}$ & $2\det B_{3}-\det A_{2}=1$\\
+      \midrule
+      $G_{2}$ &
+      \begin{pspicture}(1,1)
+	\psline(0,0)(1,0)
+	\psline(0,.1)(1,.1)
+	\psline(0,.2)(1,.2)
+	\psdots[dotstyle=o,dotsize=.25](0,.1)(1,.1)
+      \end{pspicture} & $\begin{pmatrix}2&-\sqrt{3}\\-\sqrt{3} &
+			   2\end{pmatrix}$ & 4-3=1\\
+      \bottomrule
+  \end{longtable}
+\end{filecontents}
+
+\begin{filecontents}{coxeterschlecht}
+  \begin{longtable}{l|X|l|X}
+    \toprule
+    \textsc{Name} & \textsc{Coxetergraph} & \textsc{Matrix} &
+    \textsc{Determinante}\\
+    \midrule
+    $P_{l}$ für $l>2$ &
+    \begin{pspicture}(1,1)
+      \psline(0,0)(1,0)(.5,1)(0,0)
+      \psdots[dotstyle=o,dotsize=.25](0,0)(1,0)(.5,1)
+    \end{pspicture} für $n=3$
+    \begin{pspicture}(1,1)
+      \psline(0,0)(.5,0)(.5,.5)(0,.5)(0,0)
+      \psdots[dotstyle=o,dotsize=.25](0,0)(.5,0)(.5,.5)(0,.5)
+    \end{pspicture} für $n=4$
+    & $\begin{pmatrix}
+			 2  & -1 & 0      & \dotso & \dotso & 0 & -1\\
+			 -1 & 2  & -1     & 0      & \dotso & 0 & 0\\
+			 0  & -1 & 2      & -1     & \dotso & 0 & 0\\
+			 0  & 0  & \ddots & \ddots & \ddots & \vdots & \vdots\\
+			 -1 & 0  & \dotso & \dotso & 0      & -1 & 2
+     \end{pmatrix}$ & Zeilen sind linear abhängig, da die Summe 0 ist
+    $\Rightarrow$ Determinante 0\\
+    \midrule
+    $Q_{5}$ &
+    \begin{pspicture}(1,1)
+      \psline(0,0)(1,1)
+      \psline(0,1)(1,0)
+      \psdots[dotstyle=o,dotsize=.25](0,0)(1,1)(0,1)(1,0)(.5,.5)
+    \end{pspicture} & $\begin{pmatrix}D_{4}& *\\ *&2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{1} & 0 & 0 & * & 0\\
+        0 & A_{1} & 0 & * & 0\\
+        0 & 0 & A_{1} & * & 0\\
+        * & * & * & 2 & -1\\
+        0 & 0 & 0 & -1 & 2
+      \end{pmatrix}$ &  $2\det D_{4}-(\det A_{1})^{3}=8-8=0$\\
+    \midrule
+    $Q_{6}$ &
+    \begin{pspicture}(1,2)
+      \psline(0,0)(.5,.5)(0,1)
+      \psline(.5,.5)(1,.5)
+      \psline(1.5,1)(1,.5)(1.5,0)
+      \psdots[dotstyle=o,dotsize=.25](0,0)(.5,.5)(0,1)(1,.5)(1.5,1)(1.5,0)
+    \end{pspicture} & $\begin{pmatrix}D_{5}&*\\ *&2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{3} & 0 & * & 0\\
+        0 & A_{1} & * & 0\\
+        * & * & 2 & -1\\
+        0 & 0 & -1 & 2
+      \end{pmatrix}$ & $2\det D_{5}-(\det A_{3})(\det A_{1})=8-8=0$\\
+    \midrule
+    $Q_{l}$ für $l>6$ & & $\begin{pmatrix}D_{l-1}&*\\ *&2\end{pmatrix}=
+      \begin{pmatrix}
+        D_{l-3} & 0 & * & 0\\
+        0 & A_{1} & * & 0\\
+        * & * & 2 & -1\\
+        0 & 0 & -1 & 2
+      \end{pmatrix}$ & $2\det D_{l-1}-(\det D_{l-3})(\det A_{1})=0$\\
+    \midrule
+    $R_{7}$ &
+    \begin{pspicture}(2,2)
+      \psline(0,1)(2,1)
+      \psline(1,1)(1,0)
+      \psdots[dotstyle=o,dotsize=.25](0,1)(.5,1)(1,1)(1.5,1)(2,1)(1,.5)(1,0)
+    \end{pspicture} &  $\begin{pmatrix}E_{6}&*\\ *&2\end{pmatrix}=
+      \begin{pmatrix}
+        A_{5} & * & 0\\
+        * & 2 & -1\\
+        0 & -1 &2
+      \end{pmatrix}$ & $2\det E_{6}-\det A_{5}=0$
+   % \item $R_{8}$: o-o-o-o|-o-o-o Matrix
+   %  $\begin{pmatrix}E_{7}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    D_{6} & * & 0\\
+   %    * & 2 & -1\\
+   %    0 & -1 &2
+   %  \end{pmatrix}$, Determinante $2\det E_{7}-\det D_{6}=0$
+   % \item $R_{9}$: o-o-o|-o-o-o-o-o, Matrix
+   %  $\begin{pmatrix}E_{8}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    E_{7} & * & 0\\
+   %    * & 2 & -1\\
+   %    0 & -1 & 2
+   %  \end{pmatrix}$, Determinante $2\det E_{8}-\det E_{7}=0$
+   % \item $S_{3}$: o=o=o, Matrix $\begin{pmatrix}B_{2}& *\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    2 & -\sqrt{2} & 0\\
+   %    -\sqrt{2} & 2 & -\sqrt{2}\\
+   %    0 & -\sqrt{2} & 2
+   %  \end{pmatrix}$, Determinante $2\det B_{2}-2\det A_{1}=0$
+   % \item $S_{l} (l>3)$: o=o-o-\dots{}-o-o=o, Matrix
+   %  $\begin{pmatrix}B_{l-1}&*\\ *&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    B_{l-2} & * & 0\\
+   %    * & 2 & -\sqrt{2}\\
+   %    0 & -\sqrt{2} & 2
+   %  \end{pmatrix}$, Determinante $2\det B_{l-1}- 2\det B_{l-2} =0$
+   % \item $T_{4}$: 8>=o, Matrix $\begin{pmatrix}A_{3}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    A_{1} & 0 & * & 0\\
+   %    0 & A_{1} & * & 0\\
+   %    * & * & 2 & -\sqrt{2}\\
+   %    0 & 0 & -\sqrt{2} &2
+   %  \end{pmatrix}$, Determinante $2\det A_{3}-2(\det A_{1})^{2}=0$
+   % \item $T_{5}$: 8>o-o=o, Matrix $\begin{pmatrix}D_{4}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    A_{3} & * & 0\\
+   %    * & 2 & -\sqrt{2}\\
+   %    0 & -\sqrt{2} & 2
+   %  \end{pmatrix}$, Determinante $2\det D_{4}-2\det A_{3}=0$
+   % \item $T_{l} (l>5)$: 8>o-o-o-\dots{}-o=o, Matrix
+   %  $\begin{pmatrix}D_{l-1}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    D_{l-2} & * & 0\\
+   %    * & 2 & -\sqrt{2}\\
+   %    0 & -\sqrt{2} &2
+   %  \end{pmatrix}$, Determinante $2\det D_{l-1}-2\det D_{l-2}=0$
+   % \item $U_{3}$: $o\equiv o-o$, Matrix
+   %  $\begin{pmatrix}G_{2}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    A_{1} & * & 0\\
+   %    * & 2 & -1\\
+   %    0 & -1 &2
+   %  \end{pmatrix}$, Determinante $2\det G_{2}-\det A_{1}=0$
+   % \item $V_{5}$: o-o=o-o-o, Matrix $\begin{pmatrix}F_{4}&*\\*&2\end{pmatrix}=
+   %  \begin{pmatrix}
+   %    B_{3} & * & 0\\
+   %    * & 2 & -1\\
+   %    0 & -1 &2
+   %  \end{pmatrix}$, Determinante $2\det F_{4}-\det B_{3}=0$
+      %    \bottomrule
+  \end{longtable}
+\end{filecontents}
+
+
 
 \makeindex
 
@@ -2434,9 +2709,10 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 \end{satz}
 
 \begin{defini}
-  Ist $\Pi$ wie oben, so definiert man den \highl{Coxetergraphen} $\Gamma$ von $L$
-  bezüglich $\Pi$ folgendermaßen: \todo{Haus vom Weihnachtsmann malen}
-%  \begin{picture}[htb]
+  Ist $\Pi$ wie oben, so definiert man den \highl{Coxetergraph} $\Gamma$ von $L$
+  bezüglich $\Pi$ wie in \autoref{fig:1}.
+  \begin{figure}[htb]
+    \centering
     \begin{pspicture}(11,5)
       \psline(0,0)(3,0)(3,3)(1.5,4.5)(0,3)(0,0)
       \psline(0,0)(3,3)(0,3)(3,0)
@@ -2444,11 +2720,14 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
       \psline(6,0)(6,4.5)(10,4.5)(10,3)(6,3)
       \psdots[dotstyle=o,dotsize=.25](6,0)(6,4.5)(10,4.5)(10,3)(6,3)
     \end{pspicture}
-%  \end{picture}
+    \caption{Zwei mögliche Coxetergraphen}
+    \label{fig:1}
+  \end{figure}
   Die Ecken von $\Gamma$ sind die Elemente von $\Pi$ und je zwei verschiedene
   Ecken von $\Gamma$ sind durch $A_{\alpha\beta}A_{\beta\alpha}$ Kanten
   verbunden.
 \end{defini}
+
 
 \begin{bsp}
   Sei $n\in\N$ und $S\colon=\Rad(\gl_{n})$. Dann sind einerseits
@@ -2487,8 +2766,20 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
   $\alpha_{23}, \alpha_{13}$ und man erhält $A_{\alpha_{12}\alpha_{23}}=-1$.
   Aus dem \autoref{satz:76} folgt $A_{\alpha_{12}\alpha_{i,i+1}}=0$ für
   $i>2$. Die übrigen Wurzeln kann man analog behandeln. Der Coxetergraph von
-  $\sll_{n}$ bezüglich $\Pi$ hat die Form (o-o-o\dots{}-o-o \todo{Graph
-  zeichen}, offenes Polygon in der Graphentheorie).
+  $\sll_{n}$ bezüglich $\Pi$ hat die Form in \autoref{fig:2} und wird in der
+  Graphentheorie auch als offenes Polygon bezeichnet.
+  \begin{figure}[htb]
+    \centering
+    \begin{pspicture}(6,1)
+      \psline(0,0)(2,0)
+      \psdots[dotstyle=o,dotsize=.25](0,0)(1,0)
+      \psdots[dotsize=.07](2.3,0)(2.5,0)(2.7,0)
+      \psline(3,0)(5,0)
+      \psdots[dotstyle=o,dotsize=.25](4,0)(5,0)
+    \end{pspicture}
+    \caption{Coxetergraph von $\sll_{n}$ bezüglich $\Pi$}
+    \label{fig:2}
+  \end{figure}
 \end{bsp}
 
 %% def 7.7
@@ -2727,120 +3018,12 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
 \end{satz}
 
 \begin{bsp}
+  "`Gute"' Beispiele
+  \LTXtable{\textwidth}{coxetergut}
+
+  "`Schlechte"' Beispiele
+  \LTXtable{\textwidth}{coxeterschlecht}
   \begin{itemize}
-    \item $A_{1}$: o, Matrix (2), Determinante 2
-   \item $A_{2}$: o-o, Matrix $\begin{pmatrix}2 & -1 \\ -1 & 2\end{pmatrix}$,
-    Determinante 4-1=3
-   \item $A_{l}\,(l>2)$: o-o-\dots{}-o-o, Matrix $\begin{pmatrix}A_{l-1} & *\\
-						    * & 2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{l-2} & * & 0\\
-      * & 2 & -1\\
-      0 & -1& 2
-    \end{pmatrix}$, Determinante $2\det A_{l-1}-\det A_{l-2}$, Induktion:
-    $\det A_{l}=l+1$
-   \item $B_{2}$: o=o, Matrix $\begin{pmatrix}2& -\sqrt{2}\\-\sqrt{2}&
-				 2\end{pmatrix}$, Determinante 4-2=2
-   \item $B_{3}$: o-o=o, Matrix $\begin{pmatrix}B_{2} & *\\ * & 2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{1} & * 0 \\
-      * & 2 & -1\\
-      0 & -1 & 2
-    \end{pmatrix}$, Determinante $2\det B_{2}-\det A_{1}=4-2=2$
-   \item $B_{l}\,(l>3)$: o-\dots{}-o=o, Matrix $\begin{pmatrix}B_{l-1} & *\\*
-						  & 2\end{pmatrix}=
-    \begin{pmatrix}
-      B_{l-2} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det B_{l-1}-\det B_{l-2}=2$ (induktiv)
-   \item $D_{4}$: o-o-o plus noch ein o oben, Matrix $\begin{pmatrix}A_{3} &
-							*\\* & 2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{1} & 0 & * & 0\\
-      0 & A_{1} & * & 0\\
-      * & * & 2 & -1\\
-      0 & 0 & -1 & 2
-    \end{pmatrix}$, Determinante $2\det A_{3}-(\det A_{1})^{2}=4$
-   \item $D_{5}$: o-o-o<8, Matrix $\begin{pmatrix}D_{4} & *\\* & 2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{3} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 & 2
-    \end{pmatrix}$, Determinante $2\det D_{4}-\det A_{3}=4$
-   \item $D_{l}\,(l>5)$: o-o-\dots{}-o<8, Matrix $\begin{pmatrix}D_{l-1} &
-						    *\\* & 2\end{pmatrix}=
-    \begin{pmatrix}
-      D_{l-2} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det D_{l-1}-\det D_{l-2}=4$
-   \item $E_{6}$: o-o-n-o-o (bei n hängt ein o), Matrix $\begin{pmatrix}D_{5}
-							   & *\\* &2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{4} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det D_{5}-\det A_{4}=3$
-   \item $E_{7}$: o-o-n-o-o-o, Matrix $\begin{pmatrix}D_{6} & *\\* &
-					 2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{5} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det D_{6}-\det A_{5}=2$
-   \item $E_{8}$: o-o-n-o-o-o-o, Matrix $\begin{pmatrix}D_{7} & *\\* &
-					   2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{6} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det D_{7}-\det A_{6}=1$
-   \item $F_{4}$: o-o=o-o, Matrix $\begin{pmatrix}B_{3} & *\\* & 2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{2} & *& 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det B_{3}-\det A_{2}=1$
-   \item $G_{2}$: $o\equiv o$, Matrix $\begin{pmatrix}2&-\sqrt{3}\\-\sqrt{3} &
-					 2\end{pmatrix}$, Determinante 4-3=1
-   \item $P_{l} (l>2)$: siehe gimp, Matrix $
-    \begin{pmatrix}
-      2 & -1 & 0 & \dotso & 0 & -1\\
-      -1 & 2 & -1 & 0 & \dotso & 0 & 0\\
-      0 & -1 & 2 & -1 & \dotso & 0 & 0\\
-      \dotso \\
-      -1 & 0 \dotso & 0 & -1 & 2
-    \end{pmatrix}$, Zeilen sind linear abhängig, da die Summe 0 ist
-    $\Rightarrow$ Determinante 0
-   \item $Q_{5}$, Matrix $\begin{pmatrix}D_{4}& *\\*&2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{1} & 0 & 0 & * & 0\\
-      0 & A_{1} & 0 & * & 0\\
-      0 & 0 & A_{1} & * & 0\\
-      * & * & * & 2 & -1\\
-      0 & 0 & 0 & -1 & 2
-    \end{pmatrix}$, Determinante $2\det D_{4}-(\det A_{1})^{3}=8-8=0$
-   \item $Q_{6}$: Matrix $\begin{pmatrix}D_{5}&*\\*&2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{3} & 0 & * & 0\\
-      0 & A_{1} & * & 0\\
-      * & * & 2 & -1\\
-      0 & 0 & -1 & 2
-    \end{pmatrix}$, Determinante $2\det D_{5}-(\det A_{3})(\det A_{1})=8-8=0$
-   \item $Q_{l} (>6)$: Matrix: $\begin{pmatrix}D_{l-1}&*\\*&2\end{pmatrix}=
-    \begin{pmatrix}
-      D_{l-3} & 0 & * & 0\\
-      0 & A_{1} & * & 0\\
-      * & * & 2 & -1\\
-      0 & 0 & -1 & 2
-    \end{pmatrix}$, Determinante $2\det D_{l-1}-(\det D_{l-3})(\det A_{1})=0$
-   \item $R_{7}$: Matrix $\begin{pmatrix}E_{6}&*\\*&2\end{pmatrix}=
-    \begin{pmatrix}
-      A_{5} & * & 0\\
-      * & 2 & -1\\
-      0 & -1 &2
-    \end{pmatrix}$, Determinante $2\det E_{6}-\det A_{5}=0$
    \item $R_{8}$: o-o-o-o|-o-o-o Matrix
     $\begin{pmatrix}E_{7}&*\\*&2\end{pmatrix}=
     \begin{pmatrix}
