--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -107,12 +107,13 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-%\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
-%\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
+\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
+\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 \newcommand*{\T}{\mathbb{T}}      % Torus
 \newcommand*{\1}{\mathnormal{1}}
 \newcommand*{\FF}{\mathfrak{F}}
+\newcommand*{\FB}{\mathfrak{B}}
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -1801,7 +1802,7 @@ Damit können wir die Fouriertransformation auf $L_{2}$ definieren:
     $C_{0}=(2\pi)^{\nicefrac{N}{2}}$ und $\hat{ }\colon
     L_{2}(\R^{n})\rightarrow L_{2}(\R^{n})$ mit $C_{1}=1$ sowie $\hat{ }\colon
     L_{p}(\R^{n})\rightarrow L_{p'}(\R^{n})$ mit $\nicefrac{1}{p}=
-    \nicefrac{\Theta}{2}, 1-\Theta=2(\nicefrac{1}{p}-\nicefrac{1}{2}$
+    \nicefrac{\Theta}{2}, 1-\Theta=2(\nicefrac{1}{p})-\nicefrac{1}{2}$
   \end{proof}
 \end{satz}
 
@@ -1964,6 +1965,151 @@ G_{n}$ gilt:
 \end{bsp}
 
 
+% Vorlesung vom 2007-06-06
+\section{Die Fouriertransformation auf $L_{1}(G)$}
+
+Wir integrieren bezüglich des Haarmaßes. Sei $G$ eine lokalkompakte abelsche
+Gruppe, $\Gamma=\hat{G}$ duale Gruppe und $\mu$ das Haarmaß auf $G$. Wir haben
+$L_{p}(G)=L_{p}(G,\FB(G),\mu)$ für $1\leq p\leq\infty$.
+
+\begin{defini}
+  Sei $f\in L_{1}(G)$. Dann ist die Fouriertransformation $\hat{f}$ gegeben
+  durch:
+  \begin{gather*}
+    \hat{f}(\chi)= \int_{G} f(x) \overline{\chi(x)}\,d\mu(x)
+  \end{gather*}
+  für $\chi\in\Gamma$.
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}
+    \item $G=\T, \Gamma\simeq\Z, d\mu(x)=\frac{1}{2\pi}dx, f\in L_{1}(\T),
+    \chi_{j}(x)=e^{ijx}$. Dann ist die Fouriertransformation:
+    \begin{gather*}
+    \hat{f}(j)=\frac{1}{2\pi} \int_{0}^{2\pi} f(x) e^{-ijx}\,dx
+    \end{gather*}
+    Die Fouriertransformation bildet $f$ auf die Folge $(\hat{f}(j))_{j\in\Z}$
+    der Fourierkoeffizienten ab.
+   \item $G=\Z, \mu$ Zählmaß, $\Gamma=\T=[0,2\pi), \chi_{x}(j)=e^{ijx}, f\in
+    L_{1}(\Z), (f(j))_{j\in\Z}=(c_{j})_{j\in\Z}$. Dann ist die
+    Fouriertransformation:
+    \begin{gather*}
+      \hat{f}(x) = \sum_{j=-\infty}^{\infty} f(j)e^{-ijx}= \sum c_{j} e^{-ijx}
+    \end{gather*}
+    Die Fouriertransformation bildet eine absolut summierbare Folge auf die
+    zugehörige Fourierreihe ab.
+   \item $G=\R^{n}, d\mu(x)=(2\pi)^{-\nicefrac{n}{2}}dx$ Lebesguemaß
+    $\Gamma=\R^{n}, \chi_{\xi}(x)=e^{ix\xi}$. Dann ist die
+    Fouriertransformation:
+    \begin{gather*}
+      \hat{f}(x)= (2\pi)^{-\nicefrac{n}{2}} \int_{\R^{n}} f(x) e^{-ix\xi}\,dx
+    \end{gather*}
+   \item $G=\Z_{n}$ endliche Gruppe, $\mu$ Zählmaß, $\Gamma\simeq\Z_{n},
+    \chi_{n}(k)= \frac{2\pi ihk}{n}$ für $0\leq h,k<n, f\in L_{1}(\Z_{n})$ und
+    $f$ ist ein $n$-Tupel ($c_{0},c_{1},\dotsc, c_{n-1}\in\C^{n}$). Dann ist die
+    Fouriertransformation:
+    \begin{gather*}
+      \hat{f}(h)= \sum_{k=0}^{n-1} c_{k} e^{-\frac{2\pi ihk}{n}}
+    \end{gather*}
+    Sei $F_{n}=(e_{hk})_{h,k=0}^{n-1}$ die \highl{Fouriermatrix} mit $e_{hk}=
+    e^{-\frac{2\pi ihk}{n}}$. Dann ist $\hat{f}=F_{n}f$.
+   \item Cantorgruppe -- Walsh-Fouriertransformation oder Walsh-Fourierreihen:\\
+    $G=\{\pm 1\}^{\N_{0}}= \prod_{i=0}^{\infty} G_{i}, G_{i}= \{\pm 1\},
+    \hat{G}=\Gamma\simeq(\xi, \Delta), \mu$ Produktmaß der Maße $\mu_{i}$ mit
+    $\mu_{i}= (\{\pm 1\})=\nicefrac{1}{2}$. Dann ist die Fouriertransformation:
+    \begin{gather*}
+      \hat{f}(A)= \hat{f}(w_{A})= \int_{G} f(x) w_{A}(x)\,d\mu(x)= \int_{G}
+	 f(x) \prod_{i\in\Delta} x_{i}\,d\mu(x)
+    \end{gather*}
+    Obige heißen auch \highl{Walsh-Fourierkoeffizienten}. Die
+    \highl{Walsh-Fourierreihe} ist:
+    \begin{gather*}
+      \sum_{A\in\xi} \hat{f}(A) w_{A}\leadsto \sum_{n=0}^{\infty} \hat{f}(n)
+	 w_{n} \text{ für } (\N_{0},\oplus)
+    \end{gather*}
+    Wie ist nun die Konvergenz gegen $f$? Siehe hierzu \todo{Link zu Büchern}
+  \end{enumerate}
+\end{bsp}
+
+%satz 3.5.1
+\begin{satz}
+  Sei $f\in L_{1}(G)$. Dann ist $\hat{f}\in C(\Gamma)$ eine stetige
+  beschränkte Funktion mit
+  \begin{gather*}
+    \norm{\hat{f}}_{\infty} = \sup_{x\in G} \abs{\hat{f}(x)}\leq \norm{f|
+       L_{1}(G)}
+  \end{gather*}
+  \begin{gather*}
+    \hat{f}(\chi)= \int_{G} f(x)\overline{\chi(X)}\,D\mu(X)\\
+    \abs{\hat{f}(\chi)} \leq \int_{G} \abs{f(x)}\,d\mu= \norm{f|L_{1}}
+  \end{gather*}
+  Vorbemerkungen zum weiteren Beweis:
+  \begin{enumerate}
+    \item Ein Borelmaß $\mu$ auf einem lokalkompakten topologischen Raum $X$
+    heißt \highl[Borelmaß!reguläres]{regulär}, falls gilt:
+    \begin{gather*}
+      \mu(M) = \sup_{K\subseteq M \text{ kompakt}} \mu(K)= \inf_{O\supseteq M
+	 \text{ offen}} \mu(O)
+    \end{gather*}
+    Das Haarmaß auf einer lokalkompakten abelschen Gruppe ist
+    regulär\footnote{Ohne Beweis, hierzu muss man tiefer in die Konstruktion
+    von Haarmaßen einsteigen}.
+   \item Aus der Maßtheorie: Seien $X,\mu$ ein $\sigma$-endlicher Maßraum für
+    $1\leq p<\infty$. Dann sind Treppenfunktionen dicht in $L_{p}(X,\mu)$,
+    d.\,h. für alle $f\in L_{p}(X,\mu), \epsilon>0\,\exists g=\sum_{i=1}^{n}
+    c_{i} \1_{M_{i}}, M_{i}\subseteq X$ messbar, paarweise disjunkt, so dass
+    $\norm{f-g|L_{p}}<\epsilon$. Ist $X$ lokalkompakt und $\mu$ ein reguläres
+    Borelmaß, dann kann man die $M_{i}$ kompakt wählen. Sei $X$ lokalkompakt,
+    $\mu$ ein reguläres Borelmaß auf $X$ und $f\in L_{1}(X,\mu)$ sowie
+    $\epsilon>0$. Dann existiert eine kompakte Menge $K\subseteq X$ mit
+    \begin{gather*}
+      \int_{X\setminus K} \abs{f}\,d\mu<\epsilon
+    \end{gather*}
+    \begin{proof}
+      $g=\sum_{i=1}^{n} c_{i} \1_{K_{i}}$ mit $\norm{f-g|L_{1}}<\epsilon,
+      K=\bigcup_{i=1}^{n} K_{i}, \int_{X\setminus K}\abs{f}= \int_{X\setminus
+      K} \abs{f-g} \leq\int_{X} \abs{f-g}<\epsilon$.
+    \end{proof}
+   \item Seien $X,Y$ lokalkompakt und $\mu$ reguläres Borelmaß auf $X$.
+    Außerdem sie $K\colon X\times Y\rightarrow\C$ beschränkt und stetig, $f\in
+    L_{1}(X,\mu)$. Dann ist die Funktion $T_{K}f$ auf $Y$ gegeben durch
+    \begin{gather*}
+      (T_{K}f)(y)= \int_{X} f(x)K(x,y)\,d\mu(x)
+    \end{gather*}
+    stetig.
+    \begin{proof}
+      Sei $y_{0}\in Y, \epsilon>0$. Dann ist zu zeigen, dass eine Umgebung $V$
+      von $y_{0}$ existiert, so dass $\abs{T_{K}f(y)-T_{K}f(y_{0})}<\epsilon$
+      für $y\in V$:
+      \begin{gather*}
+	\abs{T_{K} f(y) - T_{K} f(y_{0})} \leq \int_{X} \abs{f(x)}
+%	  \abs{K(x,y)-K(x,y_{0})}\,d\mu(x)}
+      \end{gather*}
+      Mit der obigen Bemerkung drei wählen wir $K$ so ,dass $\int_{X\setminus
+      K} \abs{f}<\epsilon$. Dann
+      \begin{align*}
+	\int_{X\setminus K} \abs{f(x)} \abs{K(x,y)-K(x,y_{0})}\,d\mu(x) &<\epsilon2C
+      \end{align*}
+      mit $C=\sup_{x\in X, y\in Y} \abs{K(x,y)}$. Zu $x\in K$ wählen wir eine
+      Umgebung von $(x,y_{0})\in X\times Y$ der Form $U_{x}\times V_{x}$ mit
+      $U_{x}$ Umgebung von $x$ und $V_{x}$ Umgebung von $y_{0}$ mit
+      $\abs{K(z,y)-K(x,y_{0})}<\epsilon$ für $z\in U_{x}, y\in V_{x}$. Wähle
+      nun endlich viele $x_{1},\dotsc, x_{n}$, so dass $K\subseteq
+      \bigcup_{i=1}^{n} U_{x_{i}}$. Setze $V=\bigcap_{i=1}^{n} V_{x_{i}}$
+      Umgebung von $y_{0}$. Für $x\in K, y\in V$ gilt
+      \begin{align*}
+	\abs{K(x,y)-K(x,y_{0})} &\leq
+	   \abs{K(x,y)-K(x_{i},y)}+\abs{K(x_{i},y)-K(x,y_{0})}<2\epsilon
+      \end{align*}
+       Damit folgt:
+      \begin{align*}
+	\int_{K} \abs{f(x)} \abs{K(x,y)-K(x,y_{0})}\,d\mu(x) &< 2\epsilon
+	   \int_{K}\abs{f} =2\epsilon\norm{f|L_{1}}
+      \end{align*}
+    \end{proof}
+  \end{enumerate}
+\end{satz}
+
 \appendix
 \chapter{Übungsaufgaben}
 
@@ -1991,13 +2137,12 @@ G_{n}$ gilt:
 
 \clearpage
 \appendix
-% \begin{thebibliography}{99}
-%  \bibitem{mathmode} Math mode von Herbert Voss,\\
-%   \url{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
-
-%  \bibitem{shmathguide} Short Math Guide for \LaTeX{},\\
-%   \url{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
-% \end{thebibliography}
+ \begin{thebibliography}{99}
+   \bibitem{gol1991} Walsh Series and Transforms. Theory and Applications von
+   B. Golubov, A. Efimov, V. Skvortsov
+   \bibitem{schi1990} Walsh Series: An Introduction to Dyadic Harmonic
+   Analysis  von F. Schipp, William R. Wade, P. Simon
+ \end{thebibliography}
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
