• vogel-krypt/skript.latex   · Den Schreibfehler in denoch korrigiert.
  · Die Beschreibung der Stromchiffre korrigiert.


git-svn-id: https://svn.lug-jena.de/uni-skripte@951 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -244,7 +244,7 @@
   {Vorlesungsskripte der Fakultät für Mathematik}
   \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
   weiter betreut. Das
-  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Denoch
+  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Dennoch
   garantiert weder der auf der Titelseite genannte Dozent, die Personen,
   die an dem Dokument mitgewirkt haben, noch die
   Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
@@ -675,12 +675,14 @@ bezeichnet man als \highl{symmetrisch}. Unterscheidet sich der Schlüssel für
 die Entschlüsselung von dem für die Verschlüsselung, bezeichnet man das
 Verfahren als \highl{asymmetrisch}.
 
-Weiterhin unterscheidet man die Verfahren anhand der Einheiten auf denen sie
-opperieren. Ein Verfahren, das jedes Zeichen des Eingabetexts einzeln
-verarbeitet, bezeichnet man als \highl{Stromchiffre}. Ein Verfahren, das
-hingegen mehrere Zeichen in einem Schritt verschlüsselt, das also mit Blöcken
-von Zeichen arbeiten, bezeichnet man als \highl{Blockchiffre}. Eine
-Stromchiffre ist so gesehen eine Blockchiffre mit der Blocklänge~1.
+Weiterhin unterscheidet man die Verfahren anhand der eingesetzten Schlüssel.
+Bei einer \highl{Stromchiffre} wird aus einem Hauptschlüssel ein
+Schlüsselstrom generiert, wobei je ein Element des Schlüsselstroms für die
+Verschlüsselung eines Klartextblocks verwendet wird. Bei einer
+\highl{Blockchiffre} ist der Schlüssel für alle Blöcke gleich. In der Regel
+ist die Blocklänge bei Stromchiffren wesentlich kürzer (32 statt 256 Bit),
+wodurch sie vorwiegend zur on-the-fly-Verschlüsselung, z.\,B. einer
+Videokonferenz oder eines Telefonats, verwendet werden.
 
 Ein drittes Unterscheidungsmerkmal ist die Art der Verschlüsselung. Die zwei
 Grundverfahren sind die Substitution und die Transposition. Wird jede Einheit
