- Korrektur kleiner Fehler
git-svn-id: https://svn.lug-jena.de/uni-skripte@952 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -753,9 +753,9 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     \gl_{n}\colon\spur(a)=0\}\subseteq \gl_{n}$  Ideal. Man nennt $\sll_{n}$ die
     \highl[Lie-Algebra!spezielle lineare]{spezielle lineare Lie-Algebra} des Grades $n$.
    \item Für jeden endlich-dimensionalen $\C$-Vektorraum $V$ bilden die
-    linearen Abbildungen von $V$ in sich ein Lie-Algebra $\gl(V)$, die
+    linearen Abbildungen von $V$ in sich eine Lie-Algebra $\gl(V)$, die
     \highl[Lie-Algebra!allgemeine lineare]{allgemeine lineare Lie-Algebra} von
-    $V$, wenn man $[\phi, \psi]=  \phi\cdot\psi-\psi\cdot\phi$ für
+    $V$, wenn man $[\phi, \psi]=  \phi\circ\psi-\psi\circ\phi$ für
     $\phi,\psi\in \gl(V)$ definiert. Dies 
     zeigt man analog zu \autoref{bsp:11} Nummer (iii). Wählt man
     eine Basis $b_{1},\dotsc, b_{n}$ von $V$ und schreibt  $\phi(b_{j}) =
@@ -806,7 +806,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   \end{gather*}
   \begin{proof}
     Sei $\nu\colon L\rightarrow L/_{I}, a\mapsto a+I$ kanonisch. Nach
-    \autoref{bem:15}
+    \autoref{bem:15} Punkt (iii)
     ist $\nu(K)=\{a+I:a\in K\}$ eine Unteralgebra von $L/_{I}$. Daher ist
     $\nu^{-1}(\nu(K))$ eine Unteralgebra von $L$. Es ist in der Regel nicht
     dasselbe wie $\nu$. Für $x\in\nu^{-1}(\nu(K))$ ist $x+I=\nu(x)\in \nu(K)$.
@@ -833,8 +833,8 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     Sei $\nu\colon L\rightarrow L/_{I}$ kanonische Abbildung. Nach 
     \autoref{bem:15} ist $J/_{I}=\nu(J)$ Ideal in $\nu(L)=L/_{I}$. Sei
     $\mu\colon L/_{I}\rightarrow (L/_{I})/_{(J/_{I})}$ kanonisch. Dann ist
-    $\ker(\mu\dot
-    \nu)=J$ (Nachrechnen). Wende den Homomorphiesatz auf $\mu\dot\nu$ an:
+    $\ker(\mu\circ\nu)=J$ (Nachrechnen). Wende den Homomorphiesatz auf
+    $\mu\circ\nu$ an:
     $L/_{J}\equiv (L/_{I})/_{(J/_{I})}$.
   \end{proof}
 \end{satz}
@@ -849,19 +849,23 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
 
 \begin{bsp}
   Für $a\in L$ ist die Abbildung $\ad_{a}=\ad_{a}^{L}\colon L\rightarrow L,
-  x\mapsto [a,x]$ linear mit $\ad_{[a,b]}(x)=[[a,b],x]=-[[b,x],a]-[[x,a],b] =
-  [a,[b,x]]-[b,[a,x]]= (\ad_{a}\dot \ad_{b})(x)-(\ad_{b}\dot\ad_{a})(x)=
-  [\ad_{a}, \ad_{b}](x)$ für alle $b,x\in L$. daher ist die Abbildung
+  x\mapsto [a,x]$ linear mit
+  \begin{align*}
+    \ad_{[a,b]}(x) &= [[a,b],x]=-[[b,x],a]-[[x,a],b] = [a,[b,x]]-[b,[a,x]]\\
+    &= (\ad_{a}\circ \ad_{b})(x)-(\ad_{b}\circ\ad_{a})(x)= [\ad_{a},
+       \ad_{b}](x)
+  \end{align*}
+  für alle $b,x\in L$. Daher ist die Abbildung
   $\ad\colon L\rightarrow \gl(L), a\mapsto \ad_{a}$ ein Homomorphismus von
   Lie-Algebren und damit eine Darstellung von $L$ auf $L$, die
   \highl[Darstellung!adjungierte]{adjungierte Darstellung} von $L$. Ihr Kern ist $\{a\in L\colon
   \ad_{a}=0\}=\{a\in L\colon [a,x]=0\,\forall x\in L\}=Z(L)$.
 \end{bsp}
 
-\begin{bemerk}
+\begin{bemerkON}
   Wir werden die adjungierte Darstellung dazu benutzen, um Methoden der
   linearen Algebra auf Lie-Algebren anzuwenden.
-\end{bemerk}
+\end{bemerkON}
 
 \begin{defini}
   Sei $L$ eine Lie-Algebra. Ein $L$-\highl{Modul} ist ein $\C$-Vektorraum mit
@@ -872,12 +876,12 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   \end{gather*}
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerkON}
   \begin{enumerate}
    \item Für $a\in  L$ ist also dann die Abbildung $\Delta(a)\colon
     V\rightarrow V, v\mapsto av$ linear und gleichzeitig ist die Abbildung
     $\Delta\colon L\rightarrow \gl(V), a\mapsto \Delta(a)$ ein Homomorphismus
-    von Lie-Algebra, also Darstellung. Auf diese Weise liefert jeder $L$-Modul
+    von Lie-Algebren, also eine Darstellung. Auf diese Weise liefert jeder $L$-Modul
     eine Darstellung.
    \item Ist umgekehrt $\Delta$ eine Darstellung einer Lie-Algebra $L$ auf
     einen endlich-dimensionalen $\C$-Vektorraum $V$, so kann man $V$ zu einem
@@ -886,7 +890,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     Lie-Algebra $L$ und $L$-Modul beschreiben den gleichen mathematischen
     Sachverhalt.
   \end{enumerate}
-\end{bemerk}
+\end{bemerkON}
 
 \begin{bsp}
   \begin{enumerate}
@@ -902,7 +906,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     a\cdot v_{n})$ mit $a\in L, v_{1}\in V_{1},\dotsc, v_{n}\in V_{n}$.
    \item Für $L$-Moduln $V,W$ wird der $\C$-Vektorraum $\Hom_{\C}(V,W)$ aller
     linearer Abbildungen von $V$ nach $W$ zu einem $L$-Modul, wenn man $a\cdot
-    f$ für $a\in L f\in\Hom_{\C}(V,W)$ durch $(a\cdot f)(v)\colon= a\cdot f(v)
+    f$ für $a\in L, f\in\Hom_{\C}(V,W)$ durch $(a\cdot f)(v)\colon= a\cdot f(v)
     -f(a\cdot v)$ für $v\in V$ definiert. Dies rechnet man leicht nach.
 
     Insbesondere ist $V^{*}\colon= \Hom_{\C}(V,\C)$ ein $L$-Modul mit $(a\cdot
@@ -917,7 +921,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   \gl_{n}$.
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerkON}
   \begin{enumerate}
    \item Für jede Matrixdarstellung $\Lambda$ des Grades $n$ von $L$ wird der
     $\C^{n}$ zu einem $L$-Modul, wenn man definiert $a\cdot v\colon=
@@ -929,7 +933,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     besteht kein großer Unterschied zwischen Darstellungen, Matrixdarstellung
     und Moduln. Wir werden meist mit Moduln arbeiten.
   \end{enumerate}
-\end{bemerk}
+\end{bemerkON}
 
 \begin{defini}
   Seien $L$ eine Lie-Algebra und $V$ ein $L$-Modul. Ein \highl{Untermodul} von
@@ -943,11 +947,11 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     eingeschränkten Verknüpfungen.
    \item Für jeden Untermodul $U\subseteq V$ wird die Menge
     $V/_{U}=\{v+U\colon v\in V\}$ zu einem $L$-Modul, wenn man definiert:
-    \begin{gather*}
-      (v+U)+(v'+U)\colon= (v+v')+U\\
-      \alpha(v+U)\colon= \alpha v+U\\
-      a\cdot(v+U)\colon= (a\cdot v)+U\qquad v,v'\in V, \alpha\in \C, a\in L
-    \end{gather*}
+    \begin{align*}
+      (v+U)+(v'+U) &\colon= (v+v')+U\\
+      \alpha(v+U) &\colon= \alpha v+U\\
+      a\cdot(v+U) &\colon= (a\cdot v)+U\qquad v,v'\in V, \alpha\in \C, a\in L
+    \end{align*}
     Man bezeichnet diese Menge als \highl{Faktormodul} von $V$ modulo $U$.
   \end{enumerate}
 \end{bemerk}
@@ -971,7 +975,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   V\rightarrow W$ linear mit $\phi(a\cdot v)=a\cdot\phi(v)$ für $a\in L, v\in
   V$. Dann nennt man $\phi$ einen $L$-\highl{Homomorphismus}. Wie üblich
   definiert man \highl{Monomorphismus}, \highl{Epimorphismus},
-  \highl{Isomorphismus}, \highl{Endomorphismus} und \highl{Automophismus} von
+  \highl{Isomorphismus}, \highl{Endomorphismus} und \highl{Automorphismus} von
   $L$-Moduln.
 \end{defini}
 
@@ -986,7 +990,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
    \item Für $L$-Moduln $U,V,W$ und $L$-Homomorphismen $\phi\colon
     U\rightarrow V, \psi\colon V\rightarrow W$ ist auch $\phi\circ\psi\colon
     U\rightarrow W$ ein $L$-Homomorphismus und stets ist $\id_{V}$ ein
-    $L$-Automophismus.
+    $L$-Automorphismus.
    \item Für $L$-Moduln $V,W$ und jeden $L$-Isomorphismus $\phi\colon
     V\rightarrow W$ ist auch $\phi^{-1}\colon W\rightarrow V$ ein
     $L$-Isomorphismus.
@@ -1034,9 +1038,9 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
   $V=W$ ist $\phi=\alpha\id_{V}$ für ein $\alpha\in\C$.
   \begin{proof}
     Sei $\phi\neq0$. Dann ist $\ker(\phi)\subsetneqq V$ ein Untermodul, also
-    $\ker(\phi)=0$ wegen der Irrduzibilität von $V$. Analog ist
+    $\ker(\phi)=0$ wegen der Irreduzibilität von $V$. Analog ist
     $0\neq\phi(V)\subseteq W$ Untermodul, also $\phi(V)=W$ wegen der
-    Irrduzibilität von $W$. Daher ist $\phi$ ein $L$-Homomorphismus.
+    Irreduzibilität von $W$. Daher ist $\phi$ ein $L$-Homomorphismus.
 
     Sei außerdem $V=W$ und $\alpha$ ein Eigenwert von $\phi$. Dann ist
     $\phi-\alpha\id_{V}$ ein $L$-Endomorphismus von $V$, der nicht bijektiv
@@ -1117,7 +1121,7 @@ Ein \highl{Homomorphismus} einer Lie-Algebra $L$ in eine Lie-Algebra $M$ ist
     e_{kl}]= \delta_{jk}e_{il}-\delta_{il}e_{kj}$. Dieses Element liegt in
     $\Fn_{n}$ im Fall $j\neq k, i\neq l$, aber auch im Fall $j=k, i=l$. Daher
     ist $\Fb_{n}^{2}\subseteq\Fn_{n}$. Andererseits ist $[e_{ij},
-    e_{kl}]=e_{ij}$ für $i<j$, d.\,h. $\Fb_{n}^{2}\subseteq \Fn_{n}$.
+    e_{kl}]=e_{ij}$ für $i<j$, d.\,h. $\Fb_{n}^{2}\supseteq \Fn_{n}$.
     Insgesamt ist also $\Fb_{n}^{2}=\Fn_{n}$.
     Das gleiche Argument zeigt aber auch $\Fn_{n}\subseteq [\Fn_{n}, \Fb_{n}]=
     [\Fb_{n}^{2}, \Fb_{n}]= \Fb_{n}^{3}$ und umgekehrt ist
@@ -3342,7 +3346,7 @@ fundamentalen Hilfsmittel zur Untersuchung von Lie-Algebren.
   $e_{\alpha} (\alpha\in\Phi)$ nicht ganz kanonisch war.
 \end{bemerkON}
 
-%satz 8,6
+%satz 8.6
 \begin{satz}
   Sei $L$ eine halbeinfache Lie-Algebra, $H, \Phi, h_{\lambda}, e_{\alpha}$
   wie üblich. Für zwei Wurzeln $\alpha,\beta$ mit der Eigenschaft
