• mundhenk-logik/skript.latex   · Den Text zu Beginn der Aussagenlogik überarbeitet. Die Listen durch Text     ersetzt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@959 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -489,62 +489,58 @@ und es wird gezeigt, dass sie korrekt und vollständig sind.
 
 \section{Aussagen, Formeln und Tautologien}\label{sec:1}
 
-Eine \emph{Aussage} ist entweder \emph{wahr} oder \emph{falsch}.
+Allgemein ausgedrückt, ist eine \emph{Aussage} ein sprachliches Konstrukt, dem
+man \textit{genau einen} der beiden Wahrheitswerte \emph{wahr} oder
+\emph{falsch} zuordnen kann. Diesen Grundsatz bezeichnet man als \emph{tertium
+non datur} -- wörtlich, aus dem Lateinischen übersetzt, bedeutes es "`ein
+Drittes ist nicht gegeben"'.
 
-Beispiele für Aussagen:
+Einige Beispiele für einfache Aussagen:
 \begin{itemize}
  \item Die Straße ist nass. (falsche Aussage)
  \item Jena liegt an der Saale. (wahre Aussage)
  \item Hamburg liegt in Thüringen. (falsche Aussage)
 \end{itemize}
 
-\emph{Negation} einer Aussage:
+Aus einer Aussage kann man mit Hilfe der \emph{Negation} -- ausgedrück mit dem
+Wort \emph{nicht} -- eine neue Aussage erzeugen:
 \begin{itemize}
  \item Die Straße ist nicht nass. (wahre Aussage)
  \item Jena liegt nicht an der Saale. (falsche Aussage)
 \end{itemize}
 
-\emph{Konjunktion} zweier Aussagen:
-\begin{itemize}
- \item Jena liegt an der Saale \emph{und} die Straße ist nicht nass.
-  (wahre Aussage)
-\end{itemize}
+Die Verknüpfung zweier Aussagen durch eine \emph{Konjunktion} -- ausgedrückt
+mit dem Wort \emph{und} -- ist eine neuen Aussage: Jena liegt an der Saale und
+die Straße ist nicht nass; (wahre Aussage).
 
-\emph{Disjunktion} zweier Aussagen:
-\begin{itemize}
- \item Jena liegt an der Saale \emph{oder} die Straße ist nicht nass.
-  (wahre Aussage)
-\end{itemize}
+Ebenso können zwei Aussagen durch eine \emph{Disjunktion} -- ausgedrück mit
+dem Wort \emph{oder}\footnote{\textit{Vorsicht:} Umgangssprachlich versteht
+man unter "`oder"' oft ein "`entweder \ldots{} oder"' (genau eine der beiden
+Aussagen ist wahr). In der Logik hingegen ist die Disjunktion zweier Aussagen
+wahr, wenn mindestens eine der beiden Aussagen wahr ist. Eine Disjunktion ist
+also auch wahr, wenn beide Aussagen wahr sind.}~-- zu einer neuen Aussage
+verknpüft werden: Jena liegt an der Saale oder die Straße ist nicht nass;
+(wahre Aussage).
 
-\textit{Vorsicht:} Umgangssprachlich versteht man unter "`oder"' oft ein
-"`entweder \ldots{} oder"' (genau eine der beiden Aussagen ist wahr).
-Logisch betrachtet ist die Disjunktion zweier Aussagen wahr,
-wenn mindestens eine der beiden Aussagen wahr ist.
-Eine Disjunktion ist also auch wahr, wenn beide Aussagen wahr sind.
+Zwei weitere Möglichkeiten der Verknüpfung von zwei Aussagen zu einer neuen
+Aussage sind die Implikation und die Äquivalenz. Die \emph{Implikation} wird
+mit der Konstruktion \emph{wenn \dots{} dann} ausgedrückt: Wenn die Straße
+nass ist, dann liegt Hamburg in Thüringen; (wahre Aussage). Bei der
+\emph{Äquivalenz} verwendet man die sprachliche Konstruktion \emph{genau dann,
+wenn}: Jena liegt an der Saale \emph{genau dann, wenn} Hamburg in Thüringen
+liegt; (falsche Aussage).
 
-\emph{Implikation} zweier Aussagen:
-\begin{itemize}
- \item \emph[indexrand=wenn \ldots{} dann]{Wenn
-  \textnormal{die Straße nass ist,} dann} liegt Hamburg in
-  Thüringen.
-  (wahre Aussage)
-\end{itemize}
-
-\emph{Äquivalenz} zweier Aussagen:
-\begin{itemize}
- \item Jena liegt an der Saale \emph{genau dann, wenn} Hamburg in
-  Thüringen liegt.
-  (falsche Aussage)
-\end{itemize}
-
-Für die formale Beschreibung von Aussagen verwendet man \emph{Variablen}
-bzw. Aussagezeichen wie $A_{0}, A_{1}, A_{2}, \dotsc, B_{0}, B_{1},
-B_{2},\dotsc$ und für Verknüpfungen setzt man Symbole: $\neg$
-(Negation), $\wedge$ (Konjunktion), $\vee$ (Disjunktion), $\rightarrow$
-(Implikation), $\leftrightarrow$ (Äquivalenz).
+Jedoch will man in der Logik nicht mit (u.\,U. mehrdeutigen) sprachlichen
+Konstrukten arbeiten und überträgt daher die Aussagen in eine andere, eigene
+Sprache -- diesen Vorgang bezeichnet man als \emph{Formalisierung}. Für die
+formale Beschreibung von Aussagen verwendet man dann \emph{Variablen} bzw.
+Aussagezeichen wie $A_{0}, A_{1}, A_{2}, \dotsc, B_{0}, B_{1}, B_{2},\dotsc$
+und für Verknüpfungen setzt man Symbole: $\neg$~(Negation),
+$\wedge$~(Konjunktion), $\vee$~(Disjunktion), $\rightarrow$~(Implikation) und
+$\leftrightarrow$~(Äquivalenz).
 
 \begin{defini}[Aussagenlogische Formel]
-  Aussagenlogische Formeln sind wie folgt definiert:
+  Eine aussagenlogische \emph{Formel} ist wie folgt definiert:
   \begin{enumerate}
    \item Jede Variable $A_{0}, A_{1}, A_{2}, \dotsc,B_{0}, B_{1}, B_{2},
     \dotsc$ ist eine aussagenlogische Formel.
@@ -558,15 +554,12 @@ B_{2},\dotsc$ und für Verknüpfungen setzt man Symbole: $\neg$
   \end{enumerate}
 \end{defini}
 
-\begin{bsp}[Beispiele für aussagenlogische Formeln]
-  $A_{12}$ ist eine aussagenlogische Formel.
-  $B_{1}$ ist eine aussagenlogische Formel.
-  $(A_{12} \wedge B_{1})$ ist eine aussagenlogische Formel.
-  $\big((\neg A_{12}) \rightarrow B_{1}\big)$ ist eine aussagenlogische Formel,
-  und
-  $\big((A_{12}\wedge B_{1}) \vee \big(\neg ((\neg A_{12})\rightarrow B_{1})\big)\big)$
-  ist ebenfalls eine aussagenlogische Formel.
-\end{bsp}
+$A_{12}$ und $B_{1}$ sind z.\,B. aussagenlogische Formeln. Aus
+diesen kann man die aussagenlogische Formeln $(A_{12} \wedge B_{1})$ und
+$\big((\neg A_{12}) \rightarrow B_{1}\big)$ bilden. Da diese wiederum Formeln
+sind, kann man damit die aussagenlogische Formel
+$\big((A_{12}\wedge B_{1}) \vee \big(\neg ((\neg A_{12})\rightarrow B_{1})\big)\big)$
+erstellen.
 
 \begin{bemerk}
   Wir geben den Verknüpfungszeichen unterschiedliche Bindungsstärke,
