--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2083,7 +2083,7 @@ $L_{p}(G)=L_{p}(G,\FB(G),\mu)$ für $1\leq p\leq\infty$.
       für $y\in V$:
       \begin{gather*}
 	\abs{T_{K} f(y) - T_{K} f(y_{0})} \leq \int_{X} \abs{f(x)}
-%	  \abs{K(x,y)-K(x,y_{0})}\,d\mu(x)}
+	  \abs{K(x,y)-K(x,y_{0})}\,d\mu(x)}
       \end{gather*}
       Mit der obigen Bemerkung drei wählen wir $K$ so ,dass $\int_{X\setminus
       K} \abs{f}<\epsilon$. Dann
